# Kasumi-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  math_api.h
api/: CMakeLists.txt
api/assets/scene/: cube.txt
api/assets/shader/: default_shader_fragment.glsl  default_shader_vertex.glsl
api/backends/OpenGL/: graphics_api.cpp  instance.cpp  model.cpp  platform.cpp
common/: CMakeLists.txt
common/math/impl/: quaternion_impl_eigen.h
common/util/: timer.h
deferred_renderer/: CMakeLists.txt  deferred_renderer3D.cpp  deferred_renderer3D.h
function_viewer/: CMakeLists.txt  function_viewer2D.cpp  function_viewer2D.h
graphics_api/: camera.h  framebuffer.h  graphics_api.h  mesh.h  platform_glfw.cpp  platform_glfw.h  shader.h
graphics_api/OpenGL/: camera.cpp  framebuffer.cpp  graphics_api.cpp  mesh.cpp  shader.cpp
pathtracer/: CMakeLists.txt  app.cpp  app.h  main.cpp  renderer.h
pathtracer/test/: main.cpp
rasterizer/: CMakeLists.txt  app.cpp  app.h  main.cpp  renderer.h
rasterizer/test/: main.cpp
renderer/: CMakeLists.txt  api.h  app.cpp  app.h  main.cpp
renderer/gui/: gui.h  manager.cpp  manager.h  pathtracer.cpp  pathtracer.h  simulate.cpp  simulate.h
renderer/pathtracer/: CMakeLists.txt  app.h
renderer/rasterizer/: CMakeLists.txt  app.cpp
renderer/scene/: scene.cpp  scene.h  scene_object.cpp  scene_object.h  undo.h
renderer2D/: CMakeLists.txt  main.cpp  renderer2D.cpp  renderer2D.h  scene.cpp  scene.h
renderer2D/objects/: circle.cpp  circle.h  circles.cpp  circles.h  curve.cpp  curve.h  grid.cpp  grid.h  lines.cpp  lines.h  object2D.cpp  object2D.h  points.cpp  points.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
renderer3D/: CMakeLists.txt  app.cpp  app.h  main.cpp  object3D.cpp  object3D.h  renderer3D.cpp  renderer3D.h  scene.cpp  scene.h  volume_renderer.cpp  volume_renderer.h
renderer3D/objects/: arrow.cpp  arrow.h  cloth.cpp  cloth.h  cube.cpp  cube.h  cup.cpp  cup.h  grid.cpp  grid.h  light.cpp  light.h  line.cpp  line.h  lines.cpp  lines.h  object3D.cpp  object3D.h  particles.cpp  particles.h  plane.cpp  plane.h  points.cpp  points.h  sphere.cpp  sphere.h
shader_painter/: CMakeLists.txt  main.cpp  shader_painter.cpp  shader_painter.h
shader_painter/shaders/: cloud.glsl
test/: main.cpp
tiny2d-renderer/: CMakeLists.txt  app.cpp  app.h  shape.h
universal_graphics/: CMakeLists.txt  camera.h  framebuffer.h  instance.h  math_api.h  mesh.h  model.h  platform.cpp  platform.h  pose.cpp  pose.h  shader.h  texture.h
universal_graphics/OpenGL/: shader.cpp
universal_graphics/backends/OpenGL/: camera.cpp  framebuffer.cpp  mesh.cpp  model.cpp  platform.cpp  shader.cpp  texture.cpp
universal_graphics/test/: main.cpp
volume_renderer/: CMakeLists.txt  main.cpp  volume_renderer.cpp  volume_renderer.h
workbench/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  main.cpp  platform.cpp  platform.h  renderer.cpp  renderer.h
workbench/gui/: gui.h  manager.cpp  manager.h  simulate.cpp  simulate.h
workbench/scene/: scene.cpp  scene.h  scene_object.cpp  scene_object.h  undo.h
workbench/shader/: default_shader_fragment.glsl  default_shader_vertex.glsl
workbench/test/: main.cpp  scene.txt
