cmake_minimum_required(VERSION 3.24)
project(Kasumi VERSION 2.0.0 DESCRIPTION "Kasumi: Illumine the Endless Night." LANGUAGES CXX)

add_subdirectory(backends)
if (KASUMI_RENDERER_2D)
    add_subdirectory(renderer2D)
endif ()
if (KASUMI_RENDERER_3D)
    add_subdirectory(renderer3D)
endif ()
if (KASUMI_DEFERRED_RENDERER_3D)
    add_subdirectory(deferred_renderer)
endif ()
if (KASUMI_SHADER_PAINTER)
    add_subdirectory(shader_painter)
endif ()
if (KASUMI_VOLUME_RENDERER)
    add_subdirectory(volume_renderer)
endif ()
if (KASUMI_FUNCTION_VIEWER)
    add_subdirectory(function_viewer)
endif ()